--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,52 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    margin: 0 auto;
+    text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.todo-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo {
+    width: 100%;
+    min-width: 300px;
+    margin: 1rem auto 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.header {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    text-align: center;
 }
 
-.card {
-  padding: 2em;
+input {
+    padding: 10px 3px;
+    width: 100%;
+    text-align: center;
 }
 
-.read-the-docs {
-  color: #888;
+.btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.btn {
+    padding: 10px 1rem;
+    background: #334;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.todo-content {
+    margin-top: 2rem;
 }
